--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
+
   intl: ^0.17.0
+  flutter_launcher_icons: 0.9.0
 
+flutter_icons:
 
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/logo.png"
 
   cupertino_icons: ^1.0.2
 
