--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
    <application
-        android:label="藍芽多連線溫度感測"
+        android:label="bluetooth_temperature"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
